<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ravi_gupta.slider.Fragment.PastOrderFragment"
    android:background="#f9f9f7" android:orientation="vertical" android:clickable="true">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageButton
            android:paddingRight="4dp"
            android:id="@+id/fragment_past_order_imagebutton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/dc_back_button"
            android:background="@drawable/ripple_button" />
        <!-- </RelativeLayout>-->

        <TextView
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/fragment_past_order_textview4"
            android:textSize="20sp"
            android:textColor="#999"
            android:text="@string/fragment_past_orders_textview4" />


    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#EEE"
        android:id="@+id/view"
        android:layout_below="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_past_orders_textview1"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="17sp"
            android:textColor="#999"
            android:id="@+id/fragment_past_order_textview1"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:id="@+id/fragment_past_order_linear_layout1"
        android:layout_centerInParent="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="You are not login !"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:textSize="18sp"
        android:id="@+id/fragment_past_order_textview2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_status_button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_gravity="center"
        android:text="@string/fragment_past_orders_textview2"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="#FFF"
        android:id="@+id/fragment_past_order_button1" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_past_order_listview1"
        android:layout_below="@+id/view"
        android:background="#f9f9f7">

    </ListView>

</RelativeLayout>
