 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.ravi_gupta.slider.Fragment.OrderStatusFragment"
       android:background="#f9f9f7" android:clickable="true" >


     <android.support.v7.widget.Toolbar
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/order_status_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:elevation="0dp"
         app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

         <ImageButton
             android:paddingRight="4dp"
             android:id="@+id/fragment_order_status_imagebutton1"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:src="@mipmap/dc_back_button"
             android:background="@drawable/ripple_button" />
         <!-- </RelativeLayout>-->

         <TextView
             android:padding="2dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/fragment_order_status_textview11"
             android:textSize="20sp"
             android:textColor="#999"
             android:text="@string/fragment_order_status_textview1" />

     </android.support.v7.widget.Toolbar>


     <View
         android:layout_width="match_parent"
         android:layout_height="2dp"
         android:background="#EEE"
         android:id="@+id/order_status_view"
         android:layout_below="@+id/order_status_toolbar"/>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/fragment_order_status_linear_layout"
         android:layout_below="@+id/view">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:id="@+id/fragment_order_status_background_layout"
         android:background="@drawable/splash_gradient_black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/status_gradient"
            android:paddingTop="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="25dp"
                    android:src="@mipmap/dc_date" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="4dp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:id="@+id/fragment_order_status_textview1"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:layout_marginRight="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Time : "
                    android:id="@+id/fragment_order_status_textview16"
                    android:textSize="12sp"
                    android:paddingTop="4dp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:layout_marginRight="2dp"
                    android:gravity="center|right"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:paddingTop="4dp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:gravity="right|center"
                    android:id="@+id/fragment_order_status_textview2" />

            </LinearLayout>

        </LinearLayout>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
             android:gravity="center">

             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">



             </LinearLayout>

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_gravity="right"
                 android:gravity="right"
                 android:layout_marginRight="10dp">


                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Order Id : "
                     android:id="@+id/fragment_order_status_textview15"
                     android:textSize="12sp"
                     android:paddingTop="4dp"
                     android:textColor="#FFF"
                     android:textStyle="bold"
                     android:layout_marginRight="2dp"
                     android:gravity="center|right"/>

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/fragment_order_status_textview3"
                     android:textSize="12sp"
                     android:paddingTop="4dp"
                     android:textColor="#FFF"
                     android:textStyle="bold"
                     android:gravity="center|right"/>

             </LinearLayout>
         </LinearLayout>



         <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

         <ImageView
             android:layout_width="50dp"
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:id="@+id/fragment_order_status_imageview1"
             android:src="@mipmap/logo"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="120dp"/>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="drugcorner"
                 android:layout_below="@+id/fragment_order_status_imageview1"
                 android:textSize="30sp"
                 android:textColor="#FFF"
                 android:gravity="center"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="20dp"
                 android:id="@+id/fragment_order_status_textview17"/>


        <TextView
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:gravity="right"
            android:textStyle="bold"
            android:padding="10dp"
            android:textAllCaps="true"
            android:id="@+id/fragment_order_status_textview4"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_alignParentRight="true"
            android:background="#000"
            android:layout_marginBottom="100dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_order_status_textview12"
                android:textSize="12sp"
                android:textColor="#14649F"
                android:visibility="gone"
                android:id="@+id/fragment_order_status_textview12"
                android:layout_alignParentBottom="true"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="**You can only order one at a time"
                android:textSize="12sp"
                android:visibility="gone"
                android:textColor="#14649F"
                android:id="@+id/fragment_order_status_textview13"
                android:layout_above="@+id/fragment_order_status_textview12"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/fragment_order_status_cancel_order"
                android:textAllCaps="true"
                android:textColor="#000"
                android:id="@+id/fragment_order_status_button1"
                android:background="@drawable/round_button_white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                android:layout_gravity="right|center"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/fragment_order_status_home"
                android:textAllCaps="true"
                android:textColor="#000"
                android:id="@+id/fragment_order_status_button2"
                android:background="@drawable/round_button_white"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                android:layout_gravity="right|center"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Retry"
                android:textAllCaps="true"
                android:textColor="#000"
                android:id="@+id/fragment_order_status_button4"
                android:background="@drawable/round_button_white"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                android:layout_gravity="right|center"/>


        </RelativeLayout>
     </LinearLayout>
     </LinearLayout>

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerInParent="true"
         android:visibility="gone"
         android:id="@+id/fragment_order_status_linear_layout2">


         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/fragment_past_orders_textview1"
             android:layout_gravity="center"
             android:gravity="center"
             android:textSize="17sp"
             android:textColor="#999"
             android:id="@+id/fragment_order_status_textview14"
             android:layout_marginBottom="30dp"/>

         <Button
             android:layout_width="wrap_content"
             android:layout_height="35dp"
             android:layout_centerInParent="true"
             android:background="@drawable/round_button"
             android:text="@string/fragment_order_status_button3"
             android:paddingLeft="15dp"
             android:paddingRight="15dp"
             android:textColor="#FFF"
             android:layout_gravity="center"
             android:id="@+id/fragment_order_status_button3" />


     </LinearLayout>

 </RelativeLayout>

